2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b52

 * Change: refactored printChildren and printMicrochilder
	   o Added nice tree pics (ready for rtl)
	   o Created function createTreeArray

 * Fix: Removed debugmessag in save_photos.php

 * Fix: Use gTranslate as some places in classes/Album.php

 * Change: Reword metadataOnUpload help messag.
	   Thanks to Christian "H0bbel" Mohn.

 * Change: Nicified add_form.inc

 * Fix: removed add_admin.inc from list of translateable files.

2005-12-15 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b51

 * New: Added help for metadata on upload.

 * Fix: Metadata on upload.

 * Change: Removed not need 'admin' tab in upload photos.

 * Change: Some text changes in administer startpage.

 * Fix: imagemaps were not working inside Geeklog
   (Thanks Georg)

 * Change: No fix amount of upload files, instead use dynamic count of files.
   	   Used script from  Stickman -- http://www.the-stickman.com

 * Change: Added more debumessages in util.php

 * Change: Set quality for thumbnails sticky to 50

 * Fix: Typo in css/base

 * New: Added function gImage that generates a complete <img ...> html

 * Change/Fix: Internal param use for ImageMagick. (e.g. cropping for IM5 was broken)

 * Change: Updated bars002 skin.

2005-12-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b50

 * New: Added help/ folder

 * New: Added help (questionmark) icon

 * Change: Added help for imagemap.php

 * Fix: use gTranslate, not gtranslate in setup/configdata

2005-12-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b49

 * Fix: Bug #1299951, custom field options are not applied to nested albums

2005-12-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b48

 * Fix: Bug #1281140, charset in emails.

2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b47

 * Fix: Zlrofix JS. reverted to former JS and fixed it via PHP.

2005-12-09 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b46

 * Fix: Display of ImageMaps was broken when Imagemaps in the middle where removed.
