@@ -1,3 +1,9 @@
+2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b53
+
+ * Change: Code and html nicify.
+
+ * Fix: Button value in move_photo.
+
 2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b52
 
  * Change: refactored printChildren and printMicrochilder
